Merge uat into main (#32)
Co-authored-by: GitHub Action <action@github.com>
Co-authored-by: francescoa <francescoa@VDI-EC-013.aurigaactive.aurigainformatica.it>
Co-authored-by: pasquales <pasqualesansonna@aurigaspa.com>
Co-authored-by: Simone Munao <simone.munao@nttdata.com>
Co-authored-by: adrrossi <adriano.rossi@nttdata.com>
Co-authored-by: adrrss <147711350+adrrss@users.noreply.github.com>